@@ -373,6 +373,10 @@ Bugzilla   : 13568
 Description: Remove 2.4 kernel checks lustre 1.8
 Details    : Remove 2.5.0 check from quota_check.c, quota_ctl.c,
              quota_interface.c in quota subsystem.
+	     Remove 2.4 kernel check from obd_mount.c, linux/linux-sysctl.c in
+             obdclass subsystem.
+
+
 
 --------------------------------------------------------------------------------
 
